styles.css
/******************** Body ********************/

body
{
    text-align: center;
    padding-top: 150px;
    padding-bottom: 100px;

}

h1
{
    color: #36607E;
}

#homeWelcome,
.aboutText
{
    width: 80%;
    margin: 0px auto 70px auto;
}

#homeWelcome span
{
    text-decoration: underline;
}

#aboutMyanmar
{
    margin-bottom: 70px;
}

#aboutStateside
{
    margin-bottom: 50px;
}




/******************** Navbar ********************/

.navbar
{
    box-shadow: 0px 1px 10px #e8e8e8;
}

#overide .donatebtn
{
    background: #36607E;
    color: #ffffff;
    padding: 4px 15px 4px 15px;
    margin: auto;
    border-radius: 20px;
}

#overide .contactbtn
{
    background: #ffffff;
    color: #36607E;
    padding: 4px 15px 4px 15px;
    margin: auto;
    border: 2px solid #36607E;
    border-radius: 20px;
    margin-right: 20px;
}

.navbar a
{
    color: grey;
}

.navbar a.active,
.navbar a:hover
{
    color: #204E70;
}

.navbar-toggler
{
    border-style: none;
}

.navbar-toggler:hover
{
    border: 1px solid #e8e8e8;
}

.navbar-toggler:focus
{
    outline: 0;
    outline-offset: 0;
    background-image: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}




/******************** HOME PAGE: Kids profiles ********************/

img
{
    width: 100%;
    border-radius: 2px;
    margin-bottom: 5px;
    margin-top: 20px;
    box-shadow: 2px 2px 3px grey;
}

.personalInfo
{
    font-size: .8em;
    padding: 5px;

}

.personalInfo div
{
    margin-bottom: 10px;
}

.story
{
    margin-top: 10px;
}

.personalInfo span
{
    margin-left: 5px;
    margin-right: 5px;
}

.sponsored
{
    /* background: #4CAF50; */
    background: #20bf6b;
    color: white;
    display: inline;
    padding: 5px 9px 5px 9px;
    border-radius: 2px;
}
.unsponsored
{
    /* background: #F44336; */
    background: #ee5253;
    color: white;
    display: inline;
    padding: 5px 9px 5px 9px;
    border-radius: 2px;
}




/******************** ABOUT PAGE: Staff Profiles ********************/

.jumbotron figcaption
{
    font-size: .85em;
}




/******************** Modals ********************/


#sponsorDiv
{
    margin: 20px 10px 60px 10px;
}

.modal-body
{
    padding-bottom: 15px;
}

